--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "strapi-plugin-thumbor-image-formats",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Overrides upload of thumbnails and formats to use a thumbor server instead",
   "author": {
     "name": "Timbo Slice Creative",
@@ -30,5 +30,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": "./bin/cli.js",
-  "main": "lib/index.js"
+  "main": "lib/index.js",
+  "dependencies": {
+    "thurl": "^0.1.1"
+  }
 }
